syntax="proto3";

option go_package = "./genproto/userpb";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

message RegisterUserRequest {
    string user_name = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    string user_id = 1;
    string user_name = 2;
    string email = 3;
}

message LoginUserRequest {
    string user_name = 1;
    string password = 2;
}

message LoginUserResponse {
    string user_id = 1;
    string user_email = 2;
}